# NPU_study

./: .gitignore  CMakeLists.txt  GITHUB_PUSH_SUMMARY.md  Makefile  Makefile.systemc  PROJECT_STRUCTURE.md  README.md  SYSTEMC_TLM_總結.md  TRACE_README.md  example_advanced.cpp  page_table.cpp  page_table.h  run_trace.py  smmu_registers.h  smmu_types.h  test_compilation.sh  test_smmu.cpp  trace_runner.cpp
docs/: API.md  PROJECT_STRUCTURE.md  QUICKSTART.md  SMMU_USAGE_GUIDE_ZH.md  SYSTEMC_TLM_README.md  TRACE_README.md  中文註解說明.md
include/: smmu.h  tlb.h
scripts/: run_trace.py  test_compilation.sh
src/: smmu.cpp  smmu_registers.cpp  tlb.cpp
systemc/: Makefile.systemc  smmu_tlm_initiator.h  smmu_tlm_target.h  smmu_tlm_wrapper.h  test_smmu_tlm.cpp  tlm_types.h
trace/: trace.csv
